--- a/src/components/Payment/payment.module.css
+++ b/src/components/Payment/payment.module.css
@@ -47,6 +47,8 @@
   }
   
   .input {
+    background-color: white;
+    color: black;
     padding: 12px; 
     border: 1px solid #ccc;
     border-radius: 5px;
